// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Size /> should render a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Sizeweb__Size-ej4iby-0 iLWwnK"
  />
</div>
`;

exports[`<Size /> should render a child by applying height, width, maxHeight, maxWidth, minWidth, minHeight in numeric values 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Sizeweb__Size-ej4iby-0 gKPsnH"
  />
</div>
`;

exports[`<Size /> should render a child component without any sizing properties being applied 1`] = `
<div>
  <div
    class="Viewweb__View-sc-11897uc-0 kVbtsq Sizeweb__Size-ej4iby-0 ktoTBG"
  />
</div>
`;
